# udp-offload-engine

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
tests/: __init__.py  install_python_venv.sh  launch_all_sim.sh  pyproject.toml  requirements.txt
tests/lib/: __init__.py  arpframe.py  dhcpframe.py  ethframe.py  ipv4frame.py  modelsim.ini  payload.py  pkg_tb_uoe_core.py  udpframe.py
tests/tb_axis_register/: Makefile  tb_axis_registers.py
tests/tb_uoe_arp_module/: Makefile  tb_uoe_arp_module.py
tests/tb_uoe_core/: Makefile  tb_uoe_core.py
tests/tb_uoe_dhcp_module/: Makefile  tb_uoe_dhcp_module.py
tests/tb_uoe_dhcp_module_ctrl/: Makefile  tb_uoe_dhcp_module_ctrl.py
tests/tb_uoe_dhcp_module_rx/: Makefile  tb_uoe_dhcp_module_rx.py  wave.do
tests/tb_uoe_dhcp_module_tx/: Makefile  tb_uoe_dhcp_module_tx.py
tests/tb_uoe_icmp_module/: #Makefile#  Makefile  README.md  tb_uoe_arp_module.py  tb_uoe_icmp_module.py
tests/tb_uoe_icmp_module_echo_reply/: Makefile  README.md  tb_uoe_icmp_module_echo_reply.py  tcl_stacktrace.txt  transcript
tests/tb_uoe_ipv4_module_rx/: Makefile  tb_uoe_ipv4_module_rx.py
tests/tb_uoe_ipv4_module_tx/: Makefile  tb_uoe_ipv4_module_tx.py
tests/tb_uoe_mac_shaping_rx/: Makefile  tb_uoe_mac_shaping_rx.py
tests/tb_uoe_mac_shaping_tx/: Makefile  tb_uoe_mac_shaping_tx.py
tests/tb_uoe_raw_ethernet/: Makefile  tb_uoe_raw_ethernet.py
tests/tb_uoe_raw_ethernet_rx/: Makefile  tb_uoe_raw_ethernet_rx.py
tests/tb_uoe_raw_ethernet_tx/: Makefile  tb_uoe_raw_ethernet_tx.py
tests/tb_uoe_udp_module_rx/: Makefile  tb_uoe_udp_module_rx.py
(+148 files in other folders)
